<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">剪贴板管理器</string>
    <string name="start_monitoring">开始监听</string>
    <string name="stop_monitoring">停止监听</string>
    <string name="clear_history">清空历史</string>
    <string name="clipboard_history">剪贴板历史</string>
    <string name="no_clipboard_data">暂无剪贴板数据</string>
    <string name="monitoring_active">监听中...</string>
    <string name="monitoring_inactive">未监听</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确定要删除这条记录吗？</string>
    <string name="confirm_clear">确定要清空所有历史记录吗？</string>
    <string name="cancel">取消</string>
    <string name="deleted">已删除</string>
    <string name="history_cleared">已清空历史</string>
</resources>
